#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* akozhikhov: Added new users for tablet system activity. Update masters via snapshot.
* babenko: Some recent fix in portal destruction requires masters to be updated via snapshot.
* savrus: Moved tablet manager config to dynamic configs. Update masters via snapshot.
* ermolovd: Enabled null type in schema. Update masters via snapshot.
* savrus: Allowed to change tablet cell bundle options on fly in 42a67269eb. Update masters via snapshot.
* savrus: Introduced reigns in 63bd34940. Do not need to follow fbe2670bc16 instruction to remove tablet cells.
* babenko: More portal exit attributes. Update masters via snapshot.
* babenko: Transaction depth limit introduced. Update masters via snapshot.
* ifsmirnov: Multilevel chunklists for dynamic tables. Update masters via snapshot.
* babenko: Introduce Cypress shard objects. Update masters via snapshot.
* babenko: Initial support for Cypress portals. Update masters via snapshot.
* ifsmirnov: Chunk views are now saved into chunks' Parents_ array. Update masters via snapshot.
* shakurov: Commit 61ba9b7fe9 has changed mutation semantics for unlock and tx abort. Update masters via snapshot.
* ifsmirnov: Changed semantics around required columns in replication log. Remove tablet cells before cluster update.
* ermolovd: New variant_tuple and variant_struct types. Update masters via snapshot.
* levysotsky: YT-8412: "operations_client" builtin user. Update masters via snapshot.
* babenko: Schedule delayed recomputation of membership closure on group removal. Update masters via snapshot.