@@ -1,0 +1,11 @@
+package NYT.NCellMaster.NProto;
+
+////////////////////////////////////////////////////////////////////////////////
+
+message TStoreMutationTimeReq
+{
+    // Intentionally empty. All necessary information is stored in the mutation
+    // header: the revision and the timestamp.
+}
+
+////////////////////////////////////////////////////////////////////////////////
