@@ -20,6 +20,7 @@ DECLARE_REFCOUNTED_CLASS(TMasterConnectionConfig)
 DECLARE_REFCOUNTED_CLASS(TMulticellManagerConfig)
 DECLARE_REFCOUNTED_CLASS(TDynamicMulticellManagerConfig)
 DECLARE_REFCOUNTED_CLASS(TCellMasterConfig)
+DECLARE_REFCOUNTED_CLASS(TDynamicCellMasterConfig)
 DECLARE_REFCOUNTED_CLASS(TDynamicClusterConfig)
 
 DECLARE_REFCOUNTED_CLASS(TMasterAutomaton)
@@ -30,6 +31,7 @@ DECLARE_REFCOUNTED_CLASS(TIdentityManager)
 DECLARE_REFCOUNTED_CLASS(TMulticellManager)
 DECLARE_REFCOUNTED_CLASS(TConfigManager)
 DECLARE_REFCOUNTED_CLASS(TAnnotationSetter)
+DECLARE_REFCOUNTED_CLASS(TEpochHistoryManager)
 
 class TBootstrap;
 
